--- a/doc/tese/src/tex/predefs.tex
+++ b/doc/tese/src/tex/predefs.tex
@@ -1,7 +1,8 @@
 \newcommand{\dtree}[1]{$#1$-d~tree}
 \newcommand{\kdtree}{\dtree{k}}
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
-\newcommand{\sol}[1]{\boldsymbol{#1}}
+%\newcommand{\sol}[1]{\boldsymbol{#1}}
+\newcommand{\sol}[1]{#1}
 \newcommand{\pnt}[1]{pnt(\sol{#1})}
 \newcommand{\fsol}[1]{f(\sol{#1})}
 \newcommand{\np}{m}
@@ -9,7 +10,7 @@
 \newcommand{\missingI}[1]{}
 \newcommand{\missing}[1]{
   \begin{framed}
-    {\scriptsize \bf #1}
+    {\scriptsize  #1}
   \end{framed}
 }
 \newcommand{\weight}[1]{w(\sol{#1})}
