--- a/doc/tese/src/tex/main.tex
+++ b/doc/tese/src/tex/main.tex
@@ -27,6 +27,7 @@ brazil,				% o último idioma é o principal do documento
 \usepackage{algorithm}
 
 \usepackage{graphicx}			% Inclusão de gráficos
+\usepackage{subcaption}
 
 \usepackage[T1]{fontenc}		% Selecao de codigos de fonte.
 \usepackage[utf8]{inputenc}		% Codificacao do documento (conversão automática dos acentos)
@@ -36,6 +37,7 @@ brazil,				% o último idioma é o principal do documento
 }
 
 \newtheorem{mydef}{Definição}
+\newtheorem{myprop}{Proposição}
 
 \addto\captionsbrazil{
   \renewcommand{\contentsname}%
