--- a/doc/tese/src/tex/main.tex
+++ b/doc/tese/src/tex/main.tex
@@ -20,6 +20,7 @@ brazil,				% o último idioma é o principal do documento
 \usepackage{cmap}				% Mapear caracteres especiais no PDF
 \usepackage{lmodern}			% Usa a fonte Latin Modern
 
+\usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
