--- a/doc/tese/src/alg/dp2.tex
+++ b/doc/tese/src/alg/dp2.tex
@@ -1,5 +1,5 @@
 \begin{algorithmic}[1]
-  \Function{BazDP}{$\bsym{p}, \bsym{w}, W$}
+  \Function{BazDP2}{$\bsym{p}, \bsym{w}, W$}
     \State $\solSet^0 = \big\{\emptyset\big\}$
     \State $o_1, \ldots, o_n = \ord^{max}$
     \For{$k \gets 1, n$}
