--- a/doc/tese/src/tex/main.tex
+++ b/doc/tese/src/tex/main.tex
@@ -39,6 +39,7 @@ brazil,				% o último idioma é o principal do documento
 
 \newtheorem{mydef}{Definição}
 \newtheorem{myprop}{Proposição}
+\newtheorem{myteo}{Teorema}
 
 \addto\captionsbrazil{
   \renewcommand{\contentsname}%
